# receipt-parser-legacy

./: README.md  pyproject.toml  tesseract_test.py
