[tool.poetry]
name = "receipt-parser"
version = "0.1.0"
description = ""
authors = ["Bryan Waite <bryanwaite@gmail.com>"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
opencv-python = "^4.7.0.72"
numpy = "^1.24.3"
pytesseract = "^0.3.10"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
